Fixed sizing bugs on mobile view w/ place-content & justify-self: center;

--- a/public/scss/base/_media.scss
+++ b/public/scss/base/_media.scss
@@ -11,7 +11,7 @@ Media Queries
     margin: 0 10px;
   }
   .title-job {
-    left: -97%;
+    left: -98%;
   }
 }
 
